<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/b_kuan">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/set"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textColor="#000000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/li_mode"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
             android:textSize="15sp"
            android:textColor="#2F4F4F"/>
        <Spinner
            android:id="@+id/ch_mode"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:entries="@array/mode"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dialog">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        >
        <TextView
            android:id="@+id/ip_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/de_ip"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:textSize="15sp"
            android:textColor="#2F4F4F"/>
       <EditText
           android:id="@+id/ip_edit"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:textSize="15sp"
           android:textColor="#696969"
           android:layout_marginLeft="15dp"
           android:hint="@string/ip"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        >
        <TextView
            android:id="@+id/port_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center_vertical"
            android:text="@string/de_poet"
            android:textSize="15sp"
            android:textColor="#2F4F4F"/>
        <EditText
            android:id="@+id/port_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="13sp"
            android:textColor="#696969"
            android:layout_marginLeft="15dp"
            android:hint="@string/port"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:gravity="center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start"
            android:textSize="15sp"
            android:text="@string/start"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stop"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:enabled="false"
            android:text="@string/out"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/re_set"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textColor="#000000"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hex_show"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:textColor="#2F4F4F"
        android:id="@+id/hex_show"
        android:textSize="15sp"

        android:checked="false" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_huan"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textColor="#2F4F4F"
        android:id="@+id/autohuang"
        android:layout_marginLeft="30dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/send_set"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textColor="#000000"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hex_send"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textColor="#2F4F4F"
        android:id="@+id/hex_send"
        android:layout_marginLeft="30dp"
        android:checked="false" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_send"
        android:textSize="15sp"
        android:layout_marginTop="1dp"
        android:textColor="#2F4F4F"
        android:id="@+id/auto_send"
        android:layout_marginLeft="30dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:textColor="#2F4F4F"
        android:textSize="15sp"
        android:text="@string/time"/>
    <EditText
        android:id="@+id/edi_auto"
        android:layout_width="50dp"
        android:layout_marginLeft="10dp"
        android:layout_height="match_parent"
        android:background="#ffffffff"
        android:ems="10"
        android:hint="@string/edtauto"
        android:inputType="number"
        android:textColor="#ff000000"
        android:textSize="18sp" />
</LinearLayout>
</LinearLayout>
