<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#CDAA7D35">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/link_"/>
        <TextView
            android:id="@+id/de_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="15sp"
            android:hint="@string/de_state"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         >
        <TextView
            android:id="@+id/de_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:hint="@string/d_ip"
            android:textColor="#1C1C1C"
            />
        <TextView
            android:id="@+id/de_sport"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#1C1C1C"
            android:hint="@string/d_port"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_data"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_count"
            android:layout_marginLeft="100dp"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_0"
            android:id="@+id/receive_count"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:background="#EED5D2">
        <TextView
            android:id="@+id/receive"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#EED5D2"
            android:textColor="#2F4F4F"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/se_data"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_count"
            android:layout_marginLeft="100dp"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_0"
            android:id="@+id/send_count"
            android:textSize="15sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4">
        <EditText
            android:id="@+id/send_data"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:textSize="25sp"
            android:textColor="#2F4F4F"
            android:background="#EED5D2"/>
    </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:weightSum="1">
      <Button
          android:id="@+id/de_clear"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.4"
          android:layout_marginBottom="20dp"
          android:text="@string/de_clear"/>
      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/de_send"
          android:layout_marginBottom="20dp"
          android:layout_marginLeft="5dp"
          android:layout_weight="0.4"
          android:text="@string/de_send"/>
  </LinearLayout>
</LinearLayout>
